fixed 1px gap for tablet resolution also

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -147,7 +147,7 @@
     
             position: absolute;
             left: -65px;
-            bottom: -42px;
+            bottom: -41px;
     
             border: 384px solid transparent;
             border-top: 42px solid #353535; 
